--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Walmart</title>
-  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="D:\git\walmart-project-final\static\index.css" />
 </head>
 <body>
 
