--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>Login - Circular Cart</title>
-  <link rel="stylesheet" href="login.css" />
+ <link rel="stylesheet" href="{{ url_for('static', filename='login.css') }}">
+
 </head>
 <body>
 
